# langgraph-rag-chatbot

./: .gitignore  Dockerfile  README.md  main.ipynb  main.py  my_graph.py  pyproject.toml  requirements.txt  telegram.py
graph/: nodes.py  state.py
langgraph_functions/: langgraph_functions.py
notebooks/: climbing_gear_customers_example.ipynb  main.ipynb  main_v2.ipynb  main_v3.ipynb  main_v4.ipynb  main_v5.ipynb
tools/: aws.py  rag.py  retrieval_eventi.py  sql.py  tavily.py  utils.py
utils/: aws_services.py  database_managers.py  edges.py  embedding.py  langgraph.py  language_models.py  nodes.py  prompts.py  speech_to_text.py  subscription_manager.py  text_processing.py  utils.py
